--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  
+  <h1>Now this... is an awesome calculator</h1>
+  <div class="calculator">
+    <div class="display">1234567890</div>
+    <div class="buttons">
+      <button type="button">1</button>
+      <button type="button">2</button>
+      <button type="button">3</button>
+      <button type="button">+</button>
+      <button type="button">4</button>
+      <button type="button">5</button>
+      <button type="button">6</button>
+      <button type="button">-</button>
+      <button type="button">7</button>
+      <button type="button">8</button>
+      <button type="button">9</button>
+      <button type="button">*</button>
+      <button type="button">0</button>
+      <button type="button">AC</button>
+      <button type="button">=</button>
+      <button type="button">/</button>
+    </div>
+  </div>
 </body>
 </html>
