--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Now this... is an awesome calculator</h1>
   <div class="calculator">
-    <div class="display">1234567890</div>
+    <div class="display"></div>
     <div class="buttons">
       <button type="button">1</button>
       <button type="button">2</button>
