Add classes for button colors

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <button type="button">7</button>
       <button type="button">8</button>
       <button type="button">9</button>
-      <button type="button" class="double-button">=</button>
-      <button type="button">.</button>
+      <button type="button" class="double-button button-highlight">=</button>
+      <button type="button" class="button-special">.</button>
       <button type="button">0</button>
-      <button type="button">AC</button>
+      <button type="button" class="button-special">AC</button>
     </div>
   </div>
 </body>
